fix: Config fix for Docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,17 @@ version: '3.8'
 
 services:
 
-  eureka-server:
-    build: ./eureka-server
-    ports:
-      - "8761:8761"
-    networks:
-      - ecommerce-net
-
   config-server:
     build: ./config-server
     ports:
       - "8888:8888"
+    networks:
+      - ecommerce-net
+
+  eureka-server:
+    build: ./eureka-server
+    ports:
+      - "8761:8761"
     networks:
       - ecommerce-net
 
@@ -21,7 +21,11 @@ services:
     ports:
       - "8080:8080"
     depends_on:
+      - config-server
       - eureka-server
+    environment:
+      EUREKA_HOST: eureka-server
+      CONFIG_SERVER_HOST: config-server
     networks:
       - ecommerce-net
 
@@ -30,8 +34,11 @@ services:
     ports:
       - "8081:8081"
     depends_on:
+      - config-server
       - eureka-server
     environment:
+      EUREKA_HOST: eureka-server
+      CONFIG_SERVER_HOST: config-server
       SPRING_DATASOURCE_URL: jdbc:mysql://host.docker.internal:3306/user_auth_db
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: MySQL%4243
@@ -43,8 +50,11 @@ services:
     ports:
       - "8082:8082"
     depends_on:
+      - config-server
       - eureka-server
     environment:
+      EUREKA_HOST: eureka-server
+      CONFIG_SERVER_HOST: config-server
       SPRING_DATASOURCE_URL: jdbc:mysql://host.docker.internal:3306/user_db
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: MySQL%4243
@@ -56,8 +66,11 @@ services:
     ports:
       - "8083:8083"
     depends_on:
+      - config-server
       - eureka-server
     environment:
+      EUREKA_HOST: eureka-server
+      CONFIG_SERVER_HOST: config-server
       SPRING_DATASOURCE_URL: jdbc:mysql://host.docker.internal:3306/product_db
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: MySQL%4243
@@ -69,8 +82,11 @@ services:
     ports:
       - "8084:8084"
     depends_on:
+      - config-server
       - eureka-server
     environment:
+      EUREKA_HOST: eureka-server
+      CONFIG_SERVER_HOST: config-server
       SPRING_DATASOURCE_URL: jdbc:mysql://host.docker.internal:3306/cart_db
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: MySQL%4243
@@ -82,8 +98,11 @@ services:
     ports:
       - "8085:8085"
     depends_on:
+      - config-server
       - eureka-server
     environment:
+      EUREKA_HOST: eureka-server
+      CONFIG_SERVER_HOST: config-server
       SPRING_DATASOURCE_URL: jdbc:mysql://host.docker.internal:3306/order_db
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: MySQL%4243
