--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
   profiles:
     active: dev
   config:
-    import: "optional:configserver:http://localhost:8888"
+    import: "optional:configserver:http://${CONFIG_SERVER_HOST:localhost}:8888"
 
 server:
   port: 8083
