--- a/config-server/src/main/resources/config/application.yml
+++ b/config-server/src/main/resources/config/application.yml
@@ -11,7 +11,7 @@ feign:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://${EUREKA_HOST:localhost}:8761/eureka/
     register-with-eureka: true
     fetch-registry: true
 
