--- a/config-server/src/main/resources/config/application.yml
+++ b/config-server/src/main/resources/config/application.yml
@@ -1,7 +1,8 @@
 spring:
-  redis:
-    host: ${REDIS_HOST:localhost}
-    port: 6379
+  data:
+    redis:
+      host: ${REDIS_HOST:localhost}
+      port: 6379
 
 feign:
   client:
