--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,24 @@
-version: '3.8'
+name: e-commerce-app
 
 services:
+
+  kafka:
+    image: confluentinc/cp-kafka:latest
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_PROCESS_ROLES: broker,controller
+      KAFKA_NODE_ID: 1
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092,CONTROLLER://0.0.0.0:9093
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@localhost:9093
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+
   redis:
     image: redis
     ports:
@@ -10,11 +28,26 @@ services:
     build: ./config-server
     ports:
       - "8888:8888"
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8888/actuator/health/readiness" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
     networks:
       - ecommerce-net
 
   eureka-server:
     build: ./eureka-server
+    depends_on:
+      config-server:
+        condition: service_healthy
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8761/actuator/health/readiness" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
     ports:
       - "8761:8761"
     networks:
@@ -25,8 +58,10 @@ services:
     ports:
       - "8080:8080"
     depends_on:
-      - config-server
-      - eureka-server
+      config-server:
+        condition: service_healthy
+      eureka-server:
+        condition: service_healthy
     environment:
       EUREKA_HOST: eureka-server
       CONFIG_SERVER_HOST: config-server
@@ -38,8 +73,10 @@ services:
     ports:
       - "8081:8081"
     depends_on:
-      - config-server
-      - eureka-server
+      config-server:
+        condition: service_healthy
+      eureka-server:
+        condition: service_healthy
     environment:
       EUREKA_HOST: eureka-server
       CONFIG_SERVER_HOST: config-server
@@ -54,8 +91,10 @@ services:
     ports:
       - "8082:8082"
     depends_on:
-      - config-server
-      - eureka-server
+      config-server:
+        condition: service_healthy
+      eureka-server:
+        condition: service_healthy
     environment:
       EUREKA_HOST: eureka-server
       CONFIG_SERVER_HOST: config-server
@@ -70,8 +109,10 @@ services:
     ports:
       - "8083:8083"
     depends_on:
-      - config-server
-      - eureka-server
+      config-server:
+        condition: service_healthy
+      eureka-server:
+        condition: service_healthy
     environment:
       EUREKA_HOST: eureka-server
       CONFIG_SERVER_HOST: config-server
@@ -87,8 +128,10 @@ services:
     ports:
       - "8084:8084"
     depends_on:
-      - config-server
-      - eureka-server
+      config-server:
+        condition: service_healthy
+      eureka-server:
+        condition: service_healthy
     environment:
       EUREKA_HOST: eureka-server
       CONFIG_SERVER_HOST: config-server
@@ -103,8 +146,10 @@ services:
     ports:
       - "8085:8085"
     depends_on:
-      - config-server
-      - eureka-server
+      config-server:
+        condition: service_healthy
+      eureka-server:
+        condition: service_healthy
     environment:
       EUREKA_HOST: eureka-server
       CONFIG_SERVER_HOST: config-server
